# snek-ci

./: .editorconfig  .gitignore  AUTHORS  LICENSE  Makefile  README.md  build.py  pyproject.toml  setup.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
snek/: config.py  machine.py
tests/: test_docker.py  test_git_checkout.py  test_simple_ci.py
tests/inputs/malformed-ci/build-not-list/: .snek-ci.yml
tests/inputs/malformed-ci/missing-build/: .snek-ci.yml
tests/inputs/malformed-ci/missing-name/: .snek-ci.yml
tests/inputs/simple-ci/: .snek-ci.yml  Makefile  README.md
tests/inputs/simple-ci/src/: echo.py  test_echo.py
